Phoenix upgraded to 4.0 final
git-svn-id: https://svn.apache.org/repos/asf/james/server/trunk@108081 13f79535-47bb-0310-9956-ffa450edef68